--- a/src/main/resources/view/secondaryScene.fxml
+++ b/src/main/resources/view/secondaryScene.fxml
@@ -26,19 +26,23 @@
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="300.0" minWidth="10.0" prefWidth="300.0" />
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints maxHeight="305.00000762939453" minHeight="10.0" prefHeight="81.99999237060547" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="296.0" minHeight="0.0" prefHeight="82.00000762939453" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="319.0" minHeight="0.0" prefHeight="70.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="231.0" minHeight="0.0" prefHeight="224.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="275.0" minHeight="0.0" prefHeight="85.99999237060547" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="305.00000762939453" minHeight="10.0" prefHeight="91.00000762939453" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="296.0" minHeight="0.0" prefHeight="32.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="319.0" minHeight="0.0" prefHeight="42.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="264.0" minHeight="0.0" prefHeight="41.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="305.00000762939453" minHeight="10.0" prefHeight="176.0" vgrow="SOMETIMES" />
+
         </rowConstraints>
 
          <children>
-            <Label text="Modul" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-            <Label text="Note" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Label text="Schüler" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <ChoiceBox prefHeight="25.0" prefWidth="98.0" GridPane.columnIndex="2" GridPane.rowIndex="0" />
-            <TextField GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <ChoiceBox prefHeight="25.0" prefWidth="202.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Label text="Modul" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label text="Note" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label text="Schüler" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <ChoiceBox prefHeight="25.0" prefWidth="98.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <TextField GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <ChoiceBox prefHeight="25.0" prefWidth="202.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <Button mnemonicParsing="false" text="Hinzufügen" GridPane.columnIndex="1" GridPane.rowIndex="4" />
          </children>
       </GridPane>
    </center>
