we can now catch the modul id from the combobox

--- a/src/main/resources/view/secondaryScene.fxml
+++ b/src/main/resources/view/secondaryScene.fxml
@@ -30,8 +30,8 @@
             <RowConstraints maxHeight="305.00000762939453" minHeight="10.0" prefHeight="91.00000762939453" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="296.0" minHeight="0.0" prefHeight="32.0" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="319.0" minHeight="0.0" prefHeight="42.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="264.0" minHeight="0.0" prefHeight="41.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="305.00000762939453" minHeight="10.0" prefHeight="176.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="264.0" minHeight="0.0" prefHeight="145.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="305.00000762939453" minHeight="10.0" prefHeight="52.0" vgrow="SOMETIMES" />
 
         </rowConstraints>
 
@@ -39,10 +39,11 @@
             <Label text="Modul" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <Label text="Note" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Label text="Schüler" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <ChoiceBox prefHeight="25.0" prefWidth="98.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <TextField GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <ChoiceBox prefHeight="25.0" prefWidth="202.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <TextField prefHeight="25.0" prefWidth="122.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
             <Button mnemonicParsing="false" text="Hinzufügen" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Label GridPane.columnIndex="2" GridPane.rowIndex="4" />
+            <ComboBox fx:id="scmBox" prefWidth="150.0" promptText="Schüler auswählen" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <ComboBox fx:id="modulPicker" prefWidth="150.0" promptText="Modul auswählen" GridPane.columnIndex="2" GridPane.rowIndex="1" />
          </children>
       </GridPane>
    </center>
