--- a/src/main/resources/view/primaryScene.fxml
+++ b/src/main/resources/view/primaryScene.fxml
@@ -3,13 +3,14 @@
 <?import javafx.scene.chart.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
 <BorderPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <buttons>
-            <Button fx:id="btnOverview" defaultButton="true" mnemonicParsing="false" text="Übersicht" textFill="BLUE">
+            <Button fx:id="btnOverview" defaultButton="true" mnemonicParsing="false" text="Übersicht" textFill="BLUE" underline="true">
                <effect>
                   <DropShadow />
                </effect></Button>
@@ -28,4 +29,11 @@
         </yAxis>
       </BarChart>
    </center>
+   <bottom>
+      <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+         <image>
+            <Image url="@../img/logo.png" />
+         </image>
+      </ImageView>
+   </bottom>
 </BorderPane>
