--- a/src/main/resources/view/thirdScene.fxml
+++ b/src/main/resources/view/thirdScene.fxml
@@ -20,25 +20,25 @@
     <center>
             <GridPane BorderPane.alignment="CENTER">
                 <columnConstraints>
-                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="300.0" minWidth="10.0" prefWidth="300.0" />
-                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="300.0" minWidth="10.0" prefWidth="123.0" />
-                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="340.0" minWidth="10.0" prefWidth="295.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="300.0" minWidth="10.0" prefWidth="193.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="300.0" minWidth="10.0" prefWidth="157.0" />
+                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="340.0" minWidth="10.0" prefWidth="293.0" />
                     <ColumnConstraints hgrow="SOMETIMES" maxWidth="340.0" minWidth="10.0" prefWidth="182.0" />
                 </columnConstraints>
                 <rowConstraints>
-                    <RowConstraints maxHeight="305.00000762939453" minHeight="10.0" prefHeight="88.99999237060547" vgrow="SOMETIMES" />
-                    <RowConstraints maxHeight="296.0" minHeight="0.0" prefHeight="54.0" vgrow="SOMETIMES" />
-                    <RowConstraints maxHeight="319.0" minHeight="0.0" prefHeight="58.0" vgrow="SOMETIMES" />
-                    <RowConstraints maxHeight="231.0" minHeight="0.0" prefHeight="45.0" vgrow="SOMETIMES" />
-                    <RowConstraints maxHeight="231.0" minHeight="0.0" prefHeight="225.0" vgrow="SOMETIMES" />
+                    <RowConstraints maxHeight="305.00000762939453" minHeight="10.0" prefHeight="120.00000762939453" vgrow="SOMETIMES" />
+                    <RowConstraints maxHeight="296.0" minHeight="0.0" prefHeight="52.99999237060547" vgrow="SOMETIMES" />
+                    <RowConstraints maxHeight="319.0" minHeight="0.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                    <RowConstraints maxHeight="231.0" minHeight="0.0" prefHeight="128.0" vgrow="SOMETIMES" />
+                    <RowConstraints maxHeight="231.0" minHeight="0.0" prefHeight="59.0" vgrow="SOMETIMES" />
                 </rowConstraints>
 
                 <children>
-                    <Label text="Vorname" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                    <TextField GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                    <Label text="Nachname" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                    <TextField GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <Button mnemonicParsing="false" text="Hinzufügen" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                    <Label fx:id="labelFirstName" text="Vorname" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                    <TextField fx:id="inputFirstName" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                    <Label fx:id="labelLastName" text="Nachname" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                    <TextField fx:id="inputLastName" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                    <Button fx:id="btnAdd" mnemonicParsing="false" onAction="#addStudentToDb" text="Hinzufügen" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                 </children>
             </GridPane>
     </center>
