--- a/src/main/resources/view/primaryScene.fxml
+++ b/src/main/resources/view/primaryScene.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.chart.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
 <BorderPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1">
@@ -19,21 +18,17 @@
         </buttons>
       </ButtonBar>
    </top>
-   <center>
-      <BarChart BorderPane.alignment="CENTER">
+   <left>
+      <PieChart BorderPane.alignment="CENTER" />
+   </left>
+   <right>
+      <StackedBarChart BorderPane.alignment="CENTER">
         <xAxis>
-          <CategoryAxis label="Name" side="BOTTOM" />
+          <CategoryAxis side="BOTTOM" />
         </xAxis>
         <yAxis>
-          <NumberAxis label="Modul" side="LEFT" />
+          <NumberAxis side="LEFT" />
         </yAxis>
-      </BarChart>
-   </center>
-   <bottom>
-      <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
-         <image>
-            <Image url="@../img/logo.png" />
-         </image>
-      </ImageView>
-   </bottom>
+      </StackedBarChart>
+   </right>
 </BorderPane>
