--- a/src/main/resources/view/primaryScene.fxml
+++ b/src/main/resources/view/primaryScene.fxml
@@ -19,10 +19,17 @@
       </ButtonBar>
    </top>
    <left>
-      <PieChart BorderPane.alignment="CENTER" />
+      <TableView fx:id="gradeTableView" prefHeight="149.0" prefWidth="553.0" BorderPane.alignment="CENTER">
+        <columns>
+          <TableColumn fx:id="firstNameCol" prefWidth="100.0" text="Vorname" />
+          <TableColumn fx:id="lastNameCol" prefWidth="152.0" text="Nachname" />
+            <TableColumn fx:id="gradeTableCol" minWidth="0.0" prefWidth="161.0" text="Note" />
+            <TableColumn fx:id="modulTableCol" prefWidth="140.0" text="Modul" />
+        </columns>
+      </TableView>
    </left>
-   <right>
-      <StackedBarChart BorderPane.alignment="CENTER">
+   <bottom>
+      <StackedBarChart prefHeight="311.0" prefWidth="800.0" BorderPane.alignment="CENTER">
         <xAxis>
           <CategoryAxis side="BOTTOM" />
         </xAxis>
@@ -30,5 +37,5 @@
           <NumberAxis side="LEFT" />
         </yAxis>
       </StackedBarChart>
-   </right>
+   </bottom>
 </BorderPane>
